[gd_scene load_steps=4 format=3 uid="uid://bi7ecitk5t7rc"]

[ext_resource type="Script" uid="uid://c3vfw6hpxxi4d" path="res://entities/slot/zone/zone.gd" id="1_ldp5q"]
[ext_resource type="Script" uid="uid://dta3aq1k65bgf" path="res://entities/slot/zone/state_machine.gd" id="2_5ufr8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwet6"]
size = Vector2(50, 32)

[node name="Zone" type="Control"]
custom_minimum_size = Vector2(50, 32)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_ldp5q")
metadata/_edit_use_anchors_ = true

[node name="ZoneContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 32)
layout_mode = 0
offset_right = 50.0
offset_bottom = 32.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("zone")]
unique_name_in_owner = true
script = ExtResource("2_5ufr8")
zone = NodePath("..")

[node name="DropPointDetector" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(25, 16)
shape = SubResource("RectangleShape2D_gwet6")

[node name="ZonesDetector" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonesDetector"]
position = Vector2(25, 16)
shape = SubResource("RectangleShape2D_gwet6")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
